# English-Teachers-DB

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run.sh  test_functionality.py
Docker/: docker-compose.yml
TeacherLibrary/: __init__.py  config.py
TeacherLibrary/data/: __init__.py  database.py  fetch_isbn.py  make_dataset.py  semantic_search.py
TeacherLibrary/models/: __init__.py  crud.py  schemas.py  validators.py
app/: shared_utils.py  🏠_Hjem.py
app/pages/: 1_🔍_Søg_materialer.py  2_✏️_Administrer_materialer.py
data/raw/: Bogoversigt engelsk til KA.xlsx
local/: fill_missing_data.py
